tests/toylang/neg/001458_mutation.toylang
program a = { var a : program a = { } .; } .
